vAck:in-memory-library

  Acknowledge libraries to gdbserver when requested.  Libraries are acknowledged
  after the initial processing by GDB such as loading symbols and placing
  breakpoints.

U stop reply

  Indicates that threads are currently unavailable.  We tried stopping them but
  they did not respond.  The remote stub reports support for this stop reply to
  GDB's qSupported query.

* Changed remote packets

qXfer:features:read:target.xml

  The XML that is sent as a response can now include a "device" element
  that can be used for passing information when the remote inferior
  represents a device, e.g.  a GPU.

*** Changes in GDB 15

* The MPX commands "show/set mpx bound" have been deprecated, as Intel
  listed MPX as removed in 2019.

* Building GDB and GDBserver now requires a C++17 compiler.
  For example, GCC 9 or later.

* GDB index now contains information about the main function.  This speeds up
  startup when it is being used for some large binaries.

* On hosts where threading is available, DWARF reading is now done in
  the background, resulting in faster startup.  This can be controlled
  using "maint set dwarf synchronous".

* Changed commands

disassemble
  Attempting to use both the 'r' and 'b' flags with the disassemble
  command will now give an error.  Previously the 'b' flag would
  always override the 'r' flag.

gcore
generate-core-file
  GDB now generates sparse core files, on systems that support it.

maintenance info line-table
  Add an EPILOGUE-BEGIN column to the output of the command.  It indicates
  if the line is considered the start of the epilgoue, and thus a point at
  which the frame can be considered destroyed.

set unwindonsignal on|off
show unwindonsignal
  These commands are now aliases for the new set/show unwind-on-signal.

target record-full
  This command now gives an error if any unexpected arguments are
  found after the command.

list .